Added bank account integration for customers

--- a/src/App/Client/GoldEx.Client/Pages/Customers/Components/CustomersList.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Customers/Components/CustomersList.razor
@@ -49,8 +49,8 @@
                                    Color="Color.Primary" OnClick="_ => OnEdit(context)"></MudIconButton>
                 </MudTooltip>
                 <MudTooltip Text="حذف">
-                    <MudIconButton OnClick="@(_ => OnRemove(context))" ClickPropagation="true"
-                                   Size="@Size.Small" Variant="@Variant.Filled" Icon="@Icons.Material.Filled.Delete" Color="@Color.Error"></MudIconButton>
+                    <MudIconButton OnClick="@(_ => OnRemove(context))" Size="@Size.Small" Variant="@Variant.Filled" 
+                                   Icon="@Icons.Material.Filled.Delete" Color="@Color.Error"></MudIconButton>
                 </MudTooltip>
             </div>
         </MudTd>
