Enhanced transaction funtions

--- a/src/App/Client/GoldEx.Client/Pages/Invoices/Components/InvoiceItemEditor.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Invoices/Components/InvoiceItemEditor.razor
@@ -293,7 +293,7 @@
 
             <MudButton Class="m-2"
                        Color="Color.Primary"
-                       Disabled="@IsBusy"
+                       Disabled="@_isProcessing"
                        StartIcon="@Icons.Material.Filled.Save"
                        OnClick="@(async () => await Submit())"
                        Variant="Variant.Filled">
